added new data.js file to hold character data. moved data and set import/export relationship

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <section id="actions">
       <button type="button" id="attack-btn">Attack!</button>
     </section>
-    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/index.js" type="module"></script>
   </body>
 </html>
